tests/src/frontend/syntax/invalid/abstract_macro.sk
base class B {
  macro fun m(): void;
}

fun main(): void {
  print_string("FAIL");
}
